[gd_scene load_steps=10 format=3 uid="uid://bwpk63dssg76w"]

[ext_resource type="Script" path="res://scenes/minigames/animals_escape/prefabs/countdown_script.gd" id="1_v8an8"]
[ext_resource type="Texture2D" uid="uid://caswup5a0t7yp" path="res://assets/Tiny Wonder UI Free/exit_button.png" id="2_iqymx"]
[ext_resource type="FontFile" uid="uid://cutg2f3cmjb8g" path="res://fonts/Retro Gaming.ttf" id="2_lj1sm"]
[ext_resource type="AudioStream" uid="uid://cbve8aq5i4tod" path="res://sounds/timeout-90320.mp3" id="2_yh1p5"]
[ext_resource type="PackedScene" uid="uid://bgvxt36w0hysg" path="res://prefab/game_over_label.tscn" id="3_vspxf"]
[ext_resource type="PackedScene" uid="uid://cnv86s1qb4u7a" path="res://prefab/comfirm_exit.tscn" id="5_1slow"]

[sub_resource type="Animation" id="Animation_7uhgp"]
length = 0.001

[sub_resource type="Animation" id="Animation_0f1a5"]
resource_name = "game_over_anim"
length = 0.4
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("game_over_label:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.2)
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("game_over_label:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.1, 0.1), Vector2(0.8, 0.8)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p0bhx"]
_data = {
"RESET": SubResource("Animation_7uhgp"),
"game_over_anim": SubResource("Animation_0f1a5")
}

[node name="Cronometro" type="Node2D"]
texture_filter = 1
script = ExtResource("1_v8an8")

[node name="countdown" type="Label" parent="."]
z_index = 3
offset_left = -20.0
offset_top = -56.0
offset_right = 56.0
offset_bottom = -11.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("2_lj1sm")
theme_override_font_sizes/font_size = 30
text = "10:00"

[node name="timer" type="Timer" parent="."]
wait_time = 5.0

[node name="anim" type="AnimationPlayer" parent="." groups=["time"]]
libraries = {
"": SubResource("AnimationLibrary_p0bhx")
}

[node name="timeout" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_yh1p5")
volume_db = -20.0

[node name="game_over_label" parent="." instance=ExtResource("3_vspxf")]
modulate = Color(1, 1, 1, 0)
position = Vector2(-1, 27)
scale = Vector2(0.1, 0.1)

[node name="exit_button" type="TouchScreenButton" parent="."]
z_index = 1
position = Vector2(-150, -56)
texture_normal = ExtResource("2_iqymx")

[node name="Comfirm_Exit" parent="." instance=ExtResource("5_1slow")]
position = Vector2(-57, -18)

[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
[connection signal="pressed" from="exit_button" to="." method="_on_exit_button_pressed"]
